@@ -5,7 +5,7 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyDescription("Make-like program to compile Slice files")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("ZerocC, Inc.")]
-[assembly: AssemblyProduct("Icicle")]
+[assembly: AssemblyProduct("Ice for C# Pre-Build Event Program")]
 [assembly: AssemblyCopyright("2004")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
