@@ -11,19 +11,19 @@
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly: AssemblyTitle("Icicle")]
+[assembly: AssemblyTitle("Icecs")]
 [assembly: AssemblyDescription("Ice core run-time support")]
 [assembly: AssemblyCompany("ZeroC, Inc.")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyProduct("Ice")]
+[assembly: AssemblyProduct("Ice for C#")]
 [assembly: AssemblyCopyright("Copyright (c) 2003-2004, ZeroC, Inc.")]
 [assembly: AssemblyTrademark("Ice")]
 [assembly: AssemblyCulture("")]		
 [assembly: AssemblyVersion("1.5.0")]
 [assembly: AssemblyDelaySign(false)]
 #if __MonoCS__
-[assembly: AssemblyKeyFile("IcicleKey.snk")] // mcs uses different search algorithm
+[assembly: AssemblyKeyFile("IcecsKey.snk")] // mcs uses different search algorithm
 #else
-[assembly: AssemblyKeyFile(@"..\..\IcicleKey.snk")]
+[assembly: AssemblyKeyFile(@"..\..\IcecsKey.snk")]
 #endif
 [assembly: AssemblyKeyName("")]
